src/main/java/com/example/stream/quarkus/registry/model/error/PersonIsPresent.java
package com.example.stream.quarkus.registry.model.error;

public record PersonIsPresent() implements PersonSuccess {
}
